[gd_scene load_steps=6 format=2]

[ext_resource path="res://art assets/Menu/Level Select.png" type="Texture" id=1]
[ext_resource path="res://art assets/Menu/Return.png" type="Texture" id=2]
[ext_resource path="res://art assets/Menu/Continue.png" type="Texture" id=3]
[ext_resource path="res://art assets/Menu/NewGame.png" type="Texture" id=4]
[ext_resource path="res://scenes/Play.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="."]
margin_left = 505.932
margin_top = 50.5507
margin_right = 819.932
margin_bottom = 132.551
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="New Game"]
position = Vector2( 214.016, 41.5311 )
scale = Vector2( 4.74154, 4.74154 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="."]
margin_left = 505.932
margin_top = 186.876
margin_right = 777.932
margin_bottom = 289.876
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Continue"]
position = Vector2( 195.533, 54.5822 )
scale = Vector2( 4.55446, 4.55446 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Level Select" type="Button" parent="."]
margin_left = 505.932
margin_top = 349.612
margin_right = 847.932
margin_bottom = 421.612
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Level Select"]
position = Vector2( 186.703, 38.1637 )
scale = Vector2( 3.99323, 3.99323 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Return" type="Button" parent="."]
margin_left = 505.932
margin_top = 475.307
margin_right = 729.932
margin_bottom = 547.307
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Return"]
position = Vector2( 184.614, 38.6738 )
scale = Vector2( 4.14289, 4.14289 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
